Alt fra forelesning. Har lagt om pakker i uker til subpakker, så det er lurt å sette opp slik visning i pakkeutforskeren.

--- a/foreksempel/src/uke5/matte/MatteGUI.fxml
+++ b/foreksempel/src/uke5/matte/MatteGUI.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uke5.MatteController">
+<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uke5.matte.MatteController">
    <children>
       <Pane layoutX="-132.0" layoutY="-103.0" prefHeight="493.0" prefWidth="557.0">
          <children>
