--- a/foreksempel/src/uke5/cars/CarGUI.fxml
+++ b/foreksempel/src/uke5/cars/CarGUI.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="407.0" prefWidth="540.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="bil.CarController">
+<AnchorPane prefHeight="407.0" prefWidth="540.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uke5.cars.CarController">
    <children>
       <Pane layoutX="-103.0" layoutY="-87.0">
          <children>
