--- a/foreksempel/src/of6/underveis/Game.fxml
+++ b/foreksempel/src/of6/underveis/Game.fxml
@@ -14,7 +14,7 @@
           <RowConstraints minHeight="70.0" prefHeight="70.0" maxHeight="70.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane prefHeight="200.0" prefWidth="600.0" GridPane.rowIndex="0">
+            <Pane prefHeight="200.0" prefWidth="600.0" GridPane.rowIndex="0" fx:id="board">
             </Pane>
             <Pane maxHeight="75.0" minHeight="75.0" prefHeight="75.0" prefWidth="600.0" GridPane.rowIndex="1">
                <children>
